[package]
name = "ruby-rbs-sys"
version = "0.1.1"
edition = "2024"
license = "BSD-2-Clause"
description = "Low-level FFI bindings for RBS -- the type signature language for Ruby programs"
homepage = "https://github.com/ruby/rbs"
repository = "https://github.com/ruby/rbs.git"
readme = "../../README.md"
include = [
    "src/**/*",
    "vendor/**/*",
    "build.rs",
    "wrapper.h",
    "Cargo.toml",
]

[lib]
doctest = false

[build-dependencies]
bindgen = "0.72.0"
cc = "1.2.29"
